커스텀 완료

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <span style="margin-left: 10px;">점수: <i id="score">0</i></span>
         <h2>스페이스를 눌러 게임을 시작</h2>
         <canvas id="canvas"></canvas>
+        <!-- <img src="./img.jfif" alt=""> -->
     </div>
     <script src="./script.js"></script>
 </body>
